@@ -1,2 +1,20 @@
 # AG-2020-TP3
-Tercer Trabajo Práctico de Algoritmos Genéticos, ciclo 2021 
+Tercer Trabajo Práctico de Algoritmos Genéticos, ciclo 2021
+
+Opciones de la máquina virtual para la correcta ejecución:
+
+--module-path lib/javafx11/lib --add-modules javafx.controls,javafx.fxml,javafx.swing,javafx.web
+
+
+## Atención:
+
+Se debe llenar la carpeta lib/javafx11 con la compilación de javaFX 11 para su sistema operativo.
+
+Ejemplos:
+
+| Sistema Operativo | Estructura dentro de javafx11  |
+--- | --- 
+|Windows|bin/<br/>- \*.dll<br/>lib/<br/>- \*.jar<br/>- javafx.properties|
+|Linux|lib/<br/>- \*.jar<br/>- javafx.properties<br/>- \*.so|
+
+Puede encontrar todas las versiones de JavaFX en [su sitio oficial](https://gluonhq.com/products/javafx/).
